# ZMetadata-stripper

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  presets.rs  types.rs
src-tauri/src/commands/: inspect.rs  mod.rs  strip.rs
src-tauri/src/formats/: audio.rs  document.rs  image.rs  mod.rs  video.rs
src/components/: About.tsx  CommandPalette.tsx  ContextMenu.tsx  DropZone.tsx  MetadataPanel.tsx  QueueCard.tsx  Settings.tsx  Sidebar.tsx  StatusBar.tsx  Titlebar.tsx  Toast.tsx
src/lib/: sensitivityScore.ts  tauri.ts
src/store/: usePresetStore.ts  useQueueStore.ts  useSettingsStore.ts  useToastStore.ts
