[package]
name = "zmetadata-stripper"
version = "0.1.0"
description = "Privacy-first metadata scrubber for images and documents"
authors = []
edition = "2021"

[lib]
name = "zmetadata_stripper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Metadata stripping — image
img-parts = "0.3"
kamadak-exif = "0.5"
image = { version = "0.25", default-features = false, features = ["tiff", "gif", "bmp", "jpeg", "png", "webp"] }

# Metadata stripping — document
lopdf = "0.33"
zip = "2"
quick-xml = "0.39"

# Metadata stripping — audio/video
id3 = "1"
metaflac = "0.2"
mp4ameta = "0.13"

# Utilities
rayon = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
bytes = "1"
tauri-plugin-shell = "2.3.5"

